Don't try to read disklabel to check FS_RAID on floppy boot since reopening floppy could cause Data Access Exception later. Fixes PR port-sparc/42186, ok'ed by mrg@.